# PlaneCaldav

./: .gitignore  Dockerfile  README.md  clean_calendars.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  test-caldav.sh  test_caldav_auth.py
CalPlaneBot/: .dockerignore  Makefile  README.md  docker-compose.yml  env.example  requirements.txt  run_tests.sh  test-plane-api.sh  test_caldav_auth.py
CalPlaneBot/app/: config.py  main.py
CalPlaneBot/app/models/: __init__.py  caldav.py  plane.py
CalPlaneBot/app/services/: caldav_service.py  scheduler_service.py  sync_service.py  webhook_handler.py
CalPlaneBot/config/: defaults.py
CalPlaneBot/docs/: api-reference.md  installation-guide.md  user-guide.md
CalPlaneBot/docs/architecture/: overview.md
CalPlaneBot/tests/: __init__.py  requirements-test.txt  test_stress.py
app/routers/: __init__.py  webhooks.py
app/services/: caldav_service.py  plane_service.py  scheduler_service.py  sync_service.py  webhook_handler.py
config/: __init__.py  validation.py
docs/: APPLE_CALENDAR_CONNECTION.md  administration-guide.md  index.md  troubleshooting-guide.md
docs/architecture/: data-flow.md  plane-caldav.md
scripts/: start.sh
tests/: README.md  test_edge_cases.py
